[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=46.1",
]

[tool.cibuildwheel]
before-all = "uname -a"
build-frontend = "build"
skip = [
  "*-manylinux_i686",
  "*musllinux*",
  "*-win32",
  "pp*",
]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
