[metadata]
name = hadolint_coatl
version = 2.12.0.2
description = Python wrapper around invoking hadolint (https://github.com/hadolint/hadolint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coatl-dev/hadolint-coatl
author = César Román
author_email = cesar@coatl.dev
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Funding = https://github.com/sponsors/cesarcoatl
    Source = https://github.com/coatl-dev/hadolint-coatl
    Tracker = https://github.com/coatl-dev/hadolint-coatl/issues

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Darwin-x86_64
    sha256 = 2a5b7afcab91645c39a7cebefcd835b865f7488e69be24567f433dfc3d41cd27
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-arm64
    sha256 = 5798551bf19f33951881f15eb238f90aef023f11e7ec7e9f4c37961cb87c5df6
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
    sha256 = 56de6d5e5ec427e17b74fa48d51271c7fc0d61244bf5c90e828aab8362d55010
    [hadolint.exe]
    group = hadolint-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Windows-x86_64.exe
    sha256 = ed89a156290e15452276b2b4c84efa688a5183d3b578bfaec7cfdf986f0632a8
