[metadata]
name = hadolint_coatl
version = 2.12.1b0
description = Python wrapper around invoking hadolint (https://github.com/hadolint/hadolint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coatl-dev/hadolint-coatl
author = César Román
author_email = cesar@coatl.dev
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Funding = https://github.com/sponsors/cesarcoatl
    Source = https://github.com/coatl-dev/hadolint-coatl
    Tracker = https://github.com/coatl-dev/hadolint-coatl/issues

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.1-beta/hadolint-Darwin-x86_64
    sha256 = 911008b09e88b9ce62dbd12345af8f4c933370ebcfb01211d934f1e0a4d9aecc
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.1-beta/hadolint-Linux-arm64
    sha256 = 5997119de9b8332a003be938baff3ebd2ff17dfb62e2bceccd59bd9c112599ce
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.1-beta/hadolint-Linux-x86_64
    sha256 = d0779284293475905cfa4b3a7b5c433eca6d731e45b5df0e157f46b4e6311888
    [hadolint.exe]
    group = hadolint-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.12.1-beta/hadolint-Windows-x86_64.exe
    sha256 = 5c97ce0844cfda5a8256f499ad8f7f153b68c0b15f2b28a8396e957987bebfa1
